# bazel-dynamodb-issue

./: BUILD.bazel  WORKSPACE  go.mod  go.sum  go_repositories.bzl  main.go
